--- a/index.html
+++ b/index.html
@@ -169,6 +169,78 @@
                 </div>
             </div>
         </div>
+        <div class="burg-menu">
+            <div class="burger-container">
+                <form>
+                    <input type="text" placeholder="Search...">
+                    <button class="burger-search-button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22.535" height="22.535" viewBox="0 0 22.535 22.535">
+                            <g id="vuesax_linear_search-normal" data-name="vuesax/linear/search-normal" transform="translate(-428 -188)">
+                            <g id="search-normal" transform="translate(428 188)">
+                                <path id="Vector" d="M17.84,8.92A8.92,8.92,0,1,1,8.92,0,8.92,8.92,0,0,1,17.84,8.92Z" transform="translate(1.878 1.878)" fill="none" stroke="#f16922" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"/>
+                                <path id="Vector-2" data-name="Vector" d="M1.878,1.878,0,0" transform="translate(18.779 18.779)" fill="none" stroke="#f16922" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"/>
+                                <path id="Vector-3" data-name="Vector" d="M0,0H22.535V22.535H0Z" fill="none" opacity="0"/>
+                            </g>
+                            </g>
+                        </svg>
+                    </button>
+                </form>
+                <div class="burg-lang">
+                    <a href="#">GEO</a>
+                </div>
+                <ul>
+                    <li>
+                        <a href="#">Products</a>
+                    </li>
+                    <li>
+                        <a href="#">Products</a>
+                    </li>
+                    <li>
+                        <a href="#">Products</a>
+                    </li>
+                    <li>
+                        <a href="#">Products</a>
+                    </li>
+                </ul>
+                <div class="burger-contact-links">
+                    <li>
+                         <a href="#">
+                                 <span class="icon icon-Calling"></span>
+                                 <span class="l-links">+955555778899</span>
+                         </a>
+                     </li>
+                     <li>
+                         <a href="#">
+                                 <span class="icon icon-Time"></span>
+                                 <span class="l-links">08.00-18.00</span>
+                         </a>
+                     </li>
+                     <li>
+                         <a href="#">
+                                 <span class="icon icon-Send"></span>
+                                 <span class="l-links">Info@gmail.com</span>
+                         </a>
+                     </li>
+                </div>
+                <div class="burger-social-links">
+                    <li>
+                         <a href="#"> 
+                            <span class="icon-face" >
+                         </a> 
+                    </span></li>
+                    <li>
+                         <a href="#"> 
+                            <span class="icon-tw" >
+                         </a> 
+                    </span></li>
+                    <li>
+                         <a href="#"> 
+                            <span class="icon-inst" >
+                         </a> 
+                    </span></li>
+                </div>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -185,7 +257,7 @@
             </div>
         </section>
         <section>
-            <div class="product-section padding-b">
+            <div class="product-section padding-b mobile-padding-b">
                 <div class="container">
                     <div class="our-product">
                         <div class="important-title">
@@ -430,13 +502,13 @@
                         <span class="line-1"></span>
                     </div>
                     <div class="about-position-box"> 
-                        <div class="row wrap-row">
-                            <div class="col-lg-5 col-md-6">
+                        <div class="row wrap-row ">
+                            <div class="col-lg-5 col-md-6 col-sm-6 col-12">
                                 <div class="about-image">
                                     <img src="assets/img/aboutImg.png" alt="img">
                                 </div>
                             </div>
-                            <div class="col-lg-8 col-md-8 absolute-position">
+                            <div class="col-lg-8 col-md-8 col-sm-8 col-12 absolute-position">
                                 <div class="text-box-h">
                                     <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                                         the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley
@@ -476,8 +548,8 @@
                     <div class="popular-slider-container">
                         <div class="popular-slider-item">
                             <div class="container">
-                                <div class="row wrap-row row-height">
-                                    <div class="col-lg-6 col-md-6 position-r">
+                                <div class="row wrap-row wrap-row2 row-height">
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-12 position-r">
                                         <div class="popular-product-text">
                                             <h1>Standard dummy text ever since the 1500s, when an unknown printer took
                                                 a galley of type and scrambled it to make a type specimen book
@@ -488,7 +560,7 @@
                                                 </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-6 col-md-6 absolute-pos">
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-12 absolute-pos">
                                         <div class="popular-product-img">
                                             <img src="assets/img/popularImg.png" alt="img">
                                         </div>
@@ -498,8 +570,8 @@
                         </div>
                         <div class="popular-slider-item">
                             <div class="container">
-                                <div class="row wrap-row row-height">
-                                    <div class="col-lg-6 col-md-6 position-r">
+                                <div class="row wrap-row wrap-row2 row-height">
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-12 position-r">
                                         <div class="popular-product-text">
                                             <h1>Standard dummy text ever since the 1500s, when an unknown printer took
                                                 a galley of type and scrambled it to make a type specimen book
@@ -510,7 +582,7 @@
                                                 </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-6 col-md-6 absolute-pos">
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-12 absolute-pos">
                                         <div class="popular-product-img">
                                             <img src="assets/img/popularImg.png" alt="img">
                                         </div>
@@ -533,12 +605,12 @@
                         <span class="line-1"></span>
                     </div>
                     <div class="row">
-                        <div class="col-lg-4 col-md-5 news-position">
+                        <div class="col-lg-4 col-md-5 col-sm-5 col-12 news-position">
                             <div class="news-img-box">
                                 <img src="assets/img/newsImg.png" alt="img">
                             </div>
                         </div>
-                        <div class="col-lg-8 col-md-7">
+                        <div class="col-lg-8 col-md-7 col-sm-7 col-12">
                             <div class="news-text-box">
                                 <div class="time">
                                     <span>25</span>
@@ -567,7 +639,7 @@
                 <div class="container">
                     <div class="footer-cont"> 
                         <div class="row add-items-end">
-                            <div class="col-lg-8 col-md-8 col-sm-8 col-8">
+                            <div class="col-lg-8 col-md-8 col-sm-8 col-12">
                                 <div class="adv-text">
                                     <h2>Would you like to order?</h2>
                                     <div class="text">
@@ -575,7 +647,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-sm-4 col-4 add-end">
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-12 add-end">
                                 <a href="#" class="adv-link">  
                                     <span>CONTACT US</span>
                                     <span> 
