--- a/album.html
+++ b/album.html
@@ -28,7 +28,7 @@
                 <div class="container">
                     <div class="flexy-container">
                         <div href="#" class="logo">
-                            <a href="index.html">  
+                            <a href="#">  
                                 <img src="assets/img/logo.png" alt="logo">
                             </a>
                             <div class="logo-bg"></div>
@@ -114,8 +114,8 @@
                                             </div>
                                        </div>
                                     </li>
-                                    <li class="colored">
-                                        <a href="#">NEWS</a>
+                                    <li>
+                                        <a href="news.html">NEWS</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
                                                <a href="#">Our Partners</a>
@@ -158,8 +158,86 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="burger-icon"></div>
+                        <div class="burger-icon">
+                            <div class="burger-lines">
+                                <div class="burger-line"></div>
+                                <div class="burger-line"></div>
+                                <div class="burger-line"></div>
+                            </div>
+                        </div>
                     </div>      
+                </div>
+            </div>
+        </div>
+        <div class="burg-menu">
+            <div class="burger-container">
+                <form>
+                    <input type="text" placeholder="Search...">
+                    <button class="burger-search-button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22.535" height="22.535" viewBox="0 0 22.535 22.535">
+                            <g id="vuesax_linear_search-normal" data-name="vuesax/linear/search-normal" transform="translate(-428 -188)">
+                            <g id="search-normal" transform="translate(428 188)">
+                                <path id="Vector" d="M17.84,8.92A8.92,8.92,0,1,1,8.92,0,8.92,8.92,0,0,1,17.84,8.92Z" transform="translate(1.878 1.878)" fill="none" stroke="#f16922" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"/>
+                                <path id="Vector-2" data-name="Vector" d="M1.878,1.878,0,0" transform="translate(18.779 18.779)" fill="none" stroke="#f16922" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"/>
+                                <path id="Vector-3" data-name="Vector" d="M0,0H22.535V22.535H0Z" fill="none" opacity="0"/>
+                            </g>
+                            </g>
+                        </svg>
+                    </button>
+                </form>
+                <div class="burg-lang">
+                    <a href="#">GEO</a>
+                </div>
+                <ul>
+                    <li>
+                        <a href="#">Products</a>
+                    </li>
+                    <li>
+                        <a href="#">Products</a>
+                    </li>
+                    <li>
+                        <a href="#">Products</a>
+                    </li>
+                    <li>
+                        <a href="#">Products</a>
+                    </li>
+                </ul>
+                <div class="burger-contact-links">
+                    <li>
+                         <a href="#">
+                                 <span class="icon icon-Calling"></span>
+                                 <span class="l-links">+955555778899</span>
+                         </a>
+                     </li>
+                     <li>
+                         <a href="#">
+                                 <span class="icon icon-Time"></span>
+                                 <span class="l-links">08.00-18.00</span>
+                         </a>
+                     </li>
+                     <li>
+                         <a href="#">
+                                 <span class="icon icon-Send"></span>
+                                 <span class="l-links">Info@gmail.com</span>
+                         </a>
+                     </li>
+                </div>
+                <div class="burger-social-links">
+                    <li>
+                         <a href="#"> 
+                            <span class="icon-face" >
+                         </a> 
+                    </span></li>
+                    <li>
+                         <a href="#"> 
+                            <span class="icon-tw" >
+                         </a> 
+                    </span></li>
+                    <li>
+                         <a href="#"> 
+                            <span class="icon-inst" >
+                         </a> 
+                    </span></li>
                 </div>
             </div>
         </div>
@@ -548,11 +626,11 @@
 
 
         <section>
-            <div class="footer-adv">
+            <div class=" footer-adv2 footer-adv ">
                 <div class="container">
                     <div class="footer-cont"> 
                         <div class="row add-items-end">
-                            <div class="col-lg-8 col-md-8 col-sm-8 col-8">
+                            <div class="col-lg-8 col-md-8 col-sm-8 col-12">
                                 <div class="adv-text">
                                     <h2>Would you like to order?</h2>
                                     <div class="text">
@@ -560,7 +638,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-sm-4 col-4 add-end">
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-12 add-end">
                                 <a href="#" class="adv-link">  
                                     <span>CONTACT US</span>
                                     <span> 
