--- a/partners.html
+++ b/partners.html
@@ -258,7 +258,7 @@
          
  
 
-        <section>
+        <section class="partners-margin">
             <div class="important-title ">
                 <span class="line-1"></span>
                 <h1>Our Partners</h1>
@@ -401,7 +401,7 @@
             <div class="counter-cards">
                 <div class="cards-bg"></div>
                 <div class="container">
-                    <div class="row">
+                    <div class="row slider-row">
                         <div class="col-lg-3 col-md-3 col-sm-3 col-6">
                             <div class="count-card">
                                 <div class="card-span">
