--- a/search.html
+++ b/search.html
@@ -447,7 +447,7 @@
             <div class="counter-cards">
                 <div class="cards-bg"></div>
                 <div class="container">
-                    <div class="row">
+                    <div class="row slider-row">
                         <div class="col-lg-3 col-md-3 col-sm-3 col-6">
                             <div class="count-card">
                                 <div class="card-span">
@@ -488,8 +488,6 @@
                 </div>
             </div>
         </section>
- 
-
 
         <section>
             <div class=" footer-adv2 footer-adv ">
