--- a/video-gallery.html
+++ b/video-gallery.html
@@ -258,7 +258,7 @@
          
  
 
-        <section>
+        <section class="mg-b-21">
             <div class="important-title  ">
                 <span class="line-1"></span>
                 <h1>Video Gallery</h1>
@@ -447,7 +447,7 @@
             <div class="counter-cards">
                 <div class="cards-bg"></div>
                 <div class="container">
-                    <div class="row">
+                    <div class="row slider-row">
                         <div class="col-lg-3 col-md-3 col-sm-3 col-6">
                             <div class="count-card">
                                 <div class="card-span">
@@ -488,6 +488,7 @@
                 </div>
             </div>
         </section>
+ 
  
 
 
