--- a/contact.html
+++ b/contact.html
@@ -262,7 +262,7 @@
             </div>
             <div class="container">
                 <div class="row contact-end-row">
-                    <div class="col-lg-8 col-md-8 col-sm-6 col-12 padd-2">
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-12 padd-2">
                         <div class="contact-form-side">
                             <div class="contact-title">
                                 Feel free to contact with us any time.
@@ -288,7 +288,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-12 padd-1">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-12 padd-1">
                         <div class="contact-right-side">
                             <div class="ph-ad">
                                 <div class="phone-1">
@@ -353,7 +353,7 @@
             <div class="counter-cards">
                 <div class="cards-bg"></div>
                 <div class="container">
-                    <div class="row">
+                    <div class="row slider-row">
                         <div class="col-lg-3 col-md-3 col-sm-3 col-6">
                             <div class="count-card">
                                 <div class="card-span">
@@ -394,6 +394,7 @@
                 </div>
             </div>
         </section>
+ 
  
 
 
