--- a/product-detail.html
+++ b/product-detail.html
@@ -262,8 +262,8 @@
         <section>
             <div class="products-det-cont p-t-5">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-xxl-3 col-lg-4 col-md-4 col-sm-5 ">
+                    <div class="row center-row">
+                        <div class="col-xxl-3 col-lg-4 col-md-4 col-sm-8 col-12  ">
                             <div class="tab-img-products">
                                 <div class="tab-img-box-position">
                                     <div class="tab-img-item">
@@ -289,7 +289,7 @@
                                     </div>  
                             </div>
                         </div>
-                        <div class="col-xxl-9 col-lg-8 col-md-8 col-sm-7">
+                        <div class="col-xxl-9 col-lg-8 col-md-8 col-sm-12 col-12">
                             <div class="container-components-box">
                                 <h1 class="container-name">
                                     Vegitable Container OTK 311
@@ -498,7 +498,7 @@
             <div class="counter-cards">
                 <div class="cards-bg"></div>
                 <div class="container">
-                    <div class="row">
+                    <div class="row slider-row">
                         <div class="col-lg-3 col-md-3 col-sm-3 col-6">
                             <div class="count-card">
                                 <div class="card-span">
