--- a/index.html
+++ b/index.html
@@ -598,38 +598,72 @@
         </section>
         <section>
             <div class="news-section news-section2 padding">
-                <div class="container">
-                    <div class="important-title">
-                        <span class="line-1"></span>
-                        <h1>News</h1>
-                        <span class="line-1"></span>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-5 col-sm-5 col-12 news-position">
-                            <div class="news-img-box">
-                                <img src="assets/img/newsImg.png" alt="img">
+                <div class="important-title">
+                    <span class="line-1"></span>
+                    <h1>News</h1>
+                    <span class="line-1"></span>
+                </div>
+                <div class="news-sliders-2">
+                    <div class="news-slider-2-item">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-4 col-md-5 col-sm-5 col-12 news-position">
+                                    <div class="news-img-box">
+                                        <img src="assets/img/newsImg.png" alt="img">
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 col-md-7 col-sm-7 col-12">
+                                    <div class="news-text-box">
+                                        <div class="time">
+                                            <span>25</span>
+                                            <span>Mar 2022</span>
+                                        </div>
+                                        <h2>Standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
+                                            and scrambled it to make a type specimen book
+                                        </h2>
+                                        <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s 
+                                            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to 
+                                            make a type specimen book.
+                                        </div>
+                                        <a href="#" class="see-all-link see-2  see-all-link2">
+                                            See All
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-lg-8 col-md-7 col-sm-7 col-12">
-                            <div class="news-text-box">
-                                <div class="time">
-                                    <span>25</span>
-                                    <span>Mar 2022</span>
+                    </div>
+                    <div class="news-slider-2-item">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-4 col-md-5 col-sm-5 col-12 news-position">
+                                    <div class="news-img-box">
+                                        <img src="assets/img/newsImg.png" alt="img">
+                                    </div>
                                 </div>
-                                <h2>Standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
-                                    and scrambled it to make a type specimen book
-                                </h2>
-                                <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s 
-                                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to 
-                                    make a type specimen book.
+                                <div class="col-lg-8 col-md-7 col-sm-7 col-12">
+                                    <div class="news-text-box">
+                                        <div class="time">
+                                            <span>25</span>
+                                            <span>Mar 2022</span>
+                                        </div>
+                                        <h2>Standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
+                                            and scrambled it to make a type specimen book
+                                        </h2>
+                                        <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s 
+                                            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to 
+                                            make a type specimen book.
+                                        </div>
+                                        <a href="#" class="see-all-link see-2  see-all-link2">
+                                            See All
+                                        </a>
+                                    </div>
                                 </div>
-                                <a href="#" class="see-all-link see-2  see-all-link2">
-                                    See All
-                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
+                
             </div>
         </section>
 
